# uac-analyzer

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
tests/: __init__.py  test_bandwidth.py  test_parser.py  test_topology.py
tests/fixtures/: anker-dongle.txt  apple-dongle.txt  jbl-quantum-810wireless.txt  sennheiser-gsx120.txt  smsl-d6s.txt  steelseries-arctis7.txt  uac1_stereo_headset.txt  uac2_audio_interface.txt
uac_analyzer/: __init__.py  bandwidth.py  cli.py  model.py  parser.py  render.py  topology.py
